# project-minder

./: .env.example  .gitattributes  .gitignore  .impeccable.md  .mcp.json.example  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSIGHTS.md  LICENSE  MANUAL_STEPS.archive.md  MANUAL_STEPS.md  README.md  SECURITY.md  TODO.archive.md  TODO.md  eslint.config.mjs  index.html  instrumentation-node.ts  instrumentation.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ref_repos.md  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: pr-review-responder.mjs
.github/workflows/: ci.yml  codeql.yml  gh-pages-publish.yml  pr-review-responder.yml  release-installers.yml  release.yml  site-screenshots-check.yml
docs/: manual-steps-todo-rules-handoff.md  uiux-review-2026-05-10.md
docs/adapters/: multi-harness-parity.md
docs/brainstorming/: agent-observatory-roadmap.md
docs/help/: adapters.md  agent-view.md  agents.md  auto-title.md  background.md  burn-hud.md  claude-md-audit.md  commands.md  config-history.md  config-lint.md  config.md  contributing.md  cost-report.md  cost.md  demo-mode.md  dev-servers.md  getting-started.md  github-activity.md  hooks.md  insights.md  instructions.md  kanban.md  library.md  manual-steps.md  mcp-health.md  mcp-security.md  memory.md  otel.md  plans.md  ports.md  project-details.md  project-status.md  projects.md  search-and-filter.md  security.md  service-mode.md  sessions.md  settings.md  setup.md  skills.md  (+10 more)
docs/perf/: api-bench.sh  baseline-2026-04.md  bundle-summary.mjs
docs/reviews/: 2026-07-03-app-review.md
plans/: 001-cataloglint-reuse-project-walk.md  002-docs-and-env-accuracy.md  003-parser-guard-nonarray-content.md  004-process-manager-stop-race-and-tests.md  005-api-route-characterization-harness.md  006-multi-harness-parity-spike.md  007-harness-instructions-catalog.md  008-consolidation-cleanup.md  README.md
public/: sw.js
public/help/: adapters.md  agent-view.md  agents.md  board.md  claude-md-audit.md  claude-status.md  command-palette.md  config-lint.md  config.md  cost-report.md  cost.md  getting-started.md  gsd-planning.md  hooks.md  kanban.md  (+30 more)
scripts/: build-mcp-screenshot.mjs  build-worker.mjs  capture-agents-skills.mjs  capture-screenshots-extended.mjs  capture-screenshots-prod.mjs  capture-screenshots.mjs  fetch-node-runtime.mjs  import-insights.ts  package-standalone.mjs  payload-hygiene-rules.mjs  preview-landing.mjs  probe-otel.mjs  profile-reconcile.mjs  release-local.mjs  server-only-noop.mjs  service.mjs  setup-hooks.mjs  typecheck.mjs  updater-manifest.mjs  verify-payload-hygiene.mjs
site/: index.html  style.css
src/: middleware.ts  proxy.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  health.rs  main.rs  notify.rs  supervisor.rs  tray.rs  updater.rs
tests/: activityBuckets.test.ts  adaptersRegistry.test.ts  agentCost.test.ts  agentNetwork.test.ts  agentParser.test.ts  agentView_aggregate.test.ts  agentView_aggregate_status.test.ts  agentView_eventBus.test.ts  agentView_jobRoster.test.ts  agentView_subagents.test.ts  aggregate_metrics.test.ts  apiKanban.test.ts  apiSql.test.ts  apiSwarms.test.ts  apiTaskDependencies.test.ts  applyDispatch.test.ts  applyFile.test.ts  applyHook.test.ts  applyLiveActivity.test.ts  applyMcp.test.ts  applyPlugin.test.ts  applySettings.test.ts  applyWorkflow.test.ts  atomicWrite.test.ts  boardDelegation.test.ts  boardMd.test.ts  boardWriter.test.ts  bootstrap.test.ts  boundPort.test.ts  budgetAlerts.test.ts  buildBoard.test.ts  canonicalProjectPath.test.ts  canonicalize.test.ts  catalogDetail.test.ts  cicd.test.ts  claudeAdapter.test.ts  claudeAgentsCli.test.ts  claudeFacets.test.ts  claudeHome.test.ts  claudeHooks.test.ts  (+255 more)
workers/: ingestWorker.mjs
(+908 files in other folders)
