[package]
name = "minder-tray"
version = "0.1.0"
description = "Project Minder tray app — supervises the local dashboard server as a sidecar."
authors = ["Josh Townsend"]
edition = "2021"
rust-version = "1.77"

# The library the mobile/desktop entry points share isn't needed for this
# desktop-only tray app; a plain binary keeps the scaffold minimal.
[[bin]]
name = "minder-tray"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `tray-icon` pulls in the system-tray support this whole app is built around;
# `image-png` enables `Image::from_bytes` to decode the embedded PNG tray icon.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
# Opens URLs/paths with the OS default handler WITHOUT routing the target
# through a shell parser (avoids `cmd /C start` metacharacter injection from a
# profile-derived path, e.g. a username containing `&`).
tauri-plugin-opener = "2"
serde_json = "1"
# Lightweight blocking HTTP for localhost /api/health polling — no async TLS
# stack needed for a loopback probe.
ureq = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
# Smaller, faster-to-ship tray binary.
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
