[package]
name = "minder-tray"
version = "0.1.0"
description = "Project Minder tray app — supervises the local dashboard server as a sidecar."
authors = ["Josh Townsend"]
edition = "2021"
# 1.77.2 is tauri-plugin-updater's minimum, above the 1.77 the rest of the app
# needs. Raising it here keeps `cargo build` failing with a clear MSRV message
# rather than an inscrutable error from inside the plugin's dependency tree.
rust-version = "1.77.2"

# The library the mobile/desktop entry points share isn't needed for this
# desktop-only tray app; a plain binary keeps the scaffold minimal.
[[bin]]
name = "minder-tray"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `tray-icon` pulls in the system-tray support this whole app is built around;
# `image-png` enables `Image::from_bytes` to decode the embedded PNG tray icon.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
# Opens URLs/paths with the OS default handler WITHOUT routing the target
# through a shell parser (avoids `cmd /C start` metacharacter injection from a
# profile-derived path, e.g. a username containing `&`).
tauri-plugin-opener = "2"
serde_json = "1"
# Lightweight blocking HTTP for localhost /api/health polling — no async TLS
# stack needed for a loopback probe.
ureq = "2"
# Native OS toast notifications for the manual-steps poller (C3). Click-to-open
# isn't wired up: the Rust API only builds/shows a notification — action-click
# listening (`onAction`) is a JS/webview-side API, and this tray has no window.
tauri-plugin-notification = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
# OS-registered "launch at login" (Windows registry Run key / macOS
# LaunchAgent / Linux autostart .desktop entry) — the tray's "Start at login"
# checkbox reads/writes through this, desktop-only like single-instance above.
tauri-plugin-autostart = "2"
# Self-update from the GitHub Release's latest.json. Desktop-only alongside the
# plugins above. Update PAYLOADS are authenticated with a minisign key (the
# `pubkey` in tauri.conf.json) — that is independent of OS code signing, which
# this app does not yet have: installers remain unsigned, so a first-time
# download still trips SmartScreen/Gatekeeper even though updates are verified.
tauri-plugin-updater = "2"

[profile.release]
# Smaller, faster-to-ship tray binary.
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
